--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dynamic Stock Chart</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
       // 解析URL参数的函数
       function getQueryParam(param) {
@@ -19,14 +20,13 @@
     </script>
 </head>
 <body>
-    <div class="tradingview-widget-container">
+    <div class="tradingview-widget-container" style="width: 100%;">
       <div id="tradingview_37b9f"></div>
       <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
       <script type="text/javascript">
       new TradingView.widget(
       {
-      "width": 980,
-      "height": 610,
+      "autosize": true,
       "symbol": "NASDAQ:" + getQueryParam("symbol"),
       "interval": "D",
       "timezone": "Etc/UTC",
