--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dynamic Stock Chart</title>
     <style>
-      /* 添加媒体查询以调整不同屏幕尺寸下的图表高度 */
-      @media (max-width: 600px) {
-        .tradingview-widget-container {
-          height: 300px; /* 适合大多数手机屏幕的高度 */
-        }
+      .tradingview-widget-container {
+        width: 100%;
+        height: 350px; /* 初始高度设置为350px，您需要根据需要进行调整 */
+        overflow: hidden; /* 如果需要，隐藏溢出的部分 */
       }
 
-      /* 适应平板电脑或大屏手机 */
-      @media (min-width: 601px) {
+      /* 媒体查询来处理不同屏幕大小的设备 */
+      @media (min-width: 600px) {
         .tradingview-widget-container {
-          height: 400px; /* 较大设备需要更高的图表 */
+          height: 450px; /* 对于大屏幕，可能需要更高的值 */
         }
       }
-      
-      /* 可以继续添加更多的媒体查询以适应更大的屏幕尺寸 */
     </style>
 </head>
 <body>
@@ -29,7 +26,7 @@
       <script type="text/javascript">
       new TradingView.widget(
       {
-      "autosize": true,
+      "autosize": false, // 设置为 false 可以固定高度
       "symbol": "NASDAQ:" + getQueryParam("symbol"),
       "interval": "D",
       "timezone": "Etc/UTC",
@@ -46,3 +43,4 @@
     </div>
 </body>
 </html>
+
