--- a/index.html
+++ b/index.html
@@ -21,31 +21,40 @@
         padding: 0;
         height: 100%;
         width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
       .tradingview-widget-container {
-        height: 100vh; /* 使用视口高度 */
-        width: 100vw; /* 使用视口宽度 */
+        width: 100vw; /* Use viewport width for full width */
+        height: 50vh; /* Adjust height as necessary */
+        overflow: hidden; /* Hide overflow */
       }
     </style>
 </head>
 <body>
     <div class="tradingview-widget-container">
-      <div class="tradingview-widget-container__widget"></div>
-      <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-advanced-chart.js">
+      <div id="tradingview_37b9f"></div>
+      <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+      <script type="text/javascript">
+        new TradingView.widget(
         {
           "autosize": false,
-          "symbol": "NASDAQ:" + getQueryParam('symbol'), // 获取symbol参数
+          "symbol": "NASDAQ:" + getQueryParam('symbol'),
           "interval": "D",
           "timezone": "Etc/UTC",
-          "theme": "dark",
+          "theme": "light",
           "style": "1",
           "locale": "en",
+          "toolbar_bg": "#f1f3f6",
           "enable_publishing": false,
           "allow_symbol_change": true,
-          "container_id": "tradingview-widget-container__widget"
+          "container_id": "tradingview_37b9f",
+          "width": "100%",  /* Set width to 100% of container */
+          "height": "100%"  /* Set height to 100% of container */
         }
+        );
       </script>
     </div>
 </body>
 </html>
-
